# ObjDetect

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.param
app/src/main/java/com/example/learning1/: FindObject.java  FindThread.java  ImgAns.java  ImgNetClass.java  MainActivity.java  Model.java  ObjectModel_1.java  Objects.java  Setting.java  ShowImgsGroup.java  Tuple2.java  YoloV5Ncnn.java  Yolov5.java  ansRect.java  user_config.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/res/layout/: activity_find_object.xml  activity_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  setting.xml
gradle/wrapper/: gradle-wrapper.properties
